MODIFY logging| transfer logs to middleware and to file MODIFY relay| flutter web sends payload to serial port on websocket: echo, log, msg MODIFY snapshots| home, settings

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -62,6 +62,6 @@
   "pageSettingsPlatform": "Platform Information",
   "pageSettingsMiddleware": "Middleware Information",
   "pageSettingsLoggingPath": "Log Path",
-  "pageSettingsDebugMode": "Debug",
+  "pageSettingsDebugMode": "Debugging",
   "pageSettingsNone": "None"
 }
