MODIFY version | 1.0.4 MODIFY readme | added to screenshots: process, report MODIFY api | added to setter/getter cache MODIFY data | introduced to serial port callback when open/close MODIFY data | persisted to report label, marker, legend option MODIFY data | changed to getter/setter in data MODIFY home | added to forced start for demo MODIFY process | added to some process example using timer and circle progress MODIFY report | added to some report example using CSV

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -3,6 +3,10 @@
   "appTitle": "wapui",
   "pageReportTitle": "Reports",
   "pageReportDescription": "Here is in Reports",
+  "pageReportMarker": "Marker",
+  "pageReportLabel": "Label",
+  "pageReportLegend": "Legend",
+  "pageReportShowHide": "Show/Hide",
   "pageHomeTitle": "Web Application Platform for UI",
   "pageHomeDeviceOnline": "Device Online",
   "pageHomeDeviceOffline": "Device Offline",
@@ -24,6 +28,7 @@
   "pageHomeProcessNoExists": "NO",
   "pageHomeProcessRun": "RUN",
   "pageHomeProcessNext": "NEXT",
+  "pageHomeProcessStep": "STEP",
   "pageHomeProcessQRCode": "Read to QR code",
   "pageHomeProcessCorrect": "Is correct?",
   "pageHomeProcessMainProcess": "Run to Main Process",
