--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -3,6 +3,10 @@
   "appTitle": "wapui",
   "pageReportTitle": "리포트",
   "pageReportDescription": "여기에 리포트를 보여줍니다",
+  "pageReportMarker": "마커",
+  "pageReportLabel": "레이블",
+  "pageReportLegend": "범례",
+  "pageReportShowHide": "보이기/감추기",
   "pageHomeTitle": "크로스플랫폼 UI",
   "pageHomeDeviceOnline": "디바이스에 정상적으로 연결되어 있습니다",
   "pageHomeDeviceOffline": "디바이스에 연결되어 있지 않습니다",
@@ -24,6 +28,7 @@
   "pageHomeProcessNoExists": "없습니다",
   "pageHomeProcessRun": "실행",
   "pageHomeProcessNext": "다음",
+  "pageHomeProcessStep": "단계",
   "pageHomeProcessQRCode": "QR code 읽어 주십시오",
   "pageHomeProcessCorrect": "맞습니까?",
   "pageHomeProcessMainProcess": "메인 프로세스를 실행합니다",
