MODIFY version | 1.0.5 MODIFY process | added to welcome page to play video from local or remote

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -28,7 +28,10 @@
   "pageHomeProcessNoExists": "NO",
   "pageHomeProcessRun": "RUN",
   "pageHomeProcessNext": "NEXT",
-  "pageHomeProcessQRCode": "Read to QR code",
+  "pageHomeProcessWelcome": "Here is in Video to Explains Process",
+  "pageHomeProcessWelcomeLocalVideo": "Local Video",
+  "pageHomeProcessWelcomeRemoteVideo": "Remote Video",
+  "pageHomeProcessWelcomeSwitchVideo": "Switch to Local/Remote",
   "pageHomeProcessCorrect": "Is correct?",
   "pageHomeProcessMainProcess": "Run to Main Process",
   "pageHomeProcessMainProcessSystemStatus": "Here is in System Status",
