--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -28,7 +28,10 @@
   "pageHomeProcessNoExists": "없습니다",
   "pageHomeProcessRun": "실행",
   "pageHomeProcessNext": "다음",
-  "pageHomeProcessQRCode": "QR code 읽어 주십시오",
+  "pageHomeProcessWelcome": "여기에 프로세스를 설명하는 비디오를 보여줍니다",
+  "pageHomeProcessWelcomeLocalVideo": "로컬 비디오",
+  "pageHomeProcessWelcomeRemoteVideo": "외부 비디오",
+  "pageHomeProcessWelcomeSwitchVideo": "로컬/외부 비디오 변경",
   "pageHomeProcessCorrect": "맞습니까?",
   "pageHomeProcessMainProcess": "메인 프로세스를 실행합니다",
   "pageHomeProcessMainProcessSystemStatus": "여기에 시스템 상태를 보여줍니다",
