MODIFY changed to selection color for TabBar in LandingPage MODIFY added to ScrollableDataTable lower and upper Chart using Horizontal Splitter in Report

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -8,7 +8,8 @@
   "pageReportLabel": "Label",
   "pageReportLegend": "Legend",
   "pageReportShowHide": "Show/Hide",
-  "pageReportOpenCSV": "Load File",
+  "pageReportLoadFile": "Load File",
+  "pageReportNoData": "No Data",
   "pageHomeTab": "Home",
   "pageHomeTitle": "Web Application Platform for UI",
   "pageHomeDeviceOnline": "Device Online",
