--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -8,7 +8,8 @@
   "pageReportLabel": "레이블",
   "pageReportLegend": "범례",
   "pageReportShowHide": "보이기/감추기",
-  "pageReportOpenCSV": "파일 불러오기",
+  "pageReportLoadFile": "파일 불러오기",
+  "pageReportNoData": "데이터가 없습니다",
   "pageHomeTab": "홈",
   "pageHomeTitle": "크로스플랫폼 UI",
   "pageHomeDeviceOnline": "디바이스에 정상적으로 연결되어 있습니다",
