MODIFY report | removed to legend option MODIFY report | check/uncheck to title in checkbox instead of legend in chart MODIFY report | toggle to show a item or all item on double tap in checkbox

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -7,6 +7,8 @@
   "pageReportMarker": "Marker",
   "pageReportLabel": "Label",
   "pageReportLegend": "Legend",
+  "pageReportToggle": "Toggle",
+  "pageReportToggleTooltip": "> Tab: Show/Hide Item\n> DoubleTab: Toggle This Item/Show All",
   "pageReportShowHide": "Show/Hide",
   "pageReportLoadFile": "Load File",
   "pageReportLoadFileError": "Cannot read file > because {exc}",
